# gbe-nexus

./: .gitignore  AGENTS.md  CI.md  Cargo.toml  justfile
.circleci/: config.yml
crates/jobs-domain/: Cargo.toml
crates/jobs-domain/src/: definition.rs  error.rs  ids.rs  keys.rs  lib.rs  lifecycle.rs  outcome.rs  payloads.rs  state.rs  subjects.rs
crates/nexus/: Cargo.toml
crates/nexus-memory/: Cargo.toml
crates/nexus-memory/src/: consumer.rs  lib.rs  message.rs  store.rs  subscription.rs  transport.rs
crates/nexus-memory/tests/: integration.rs
crates/nexus-redis/: Cargo.toml
crates/nexus-redis/src/: config.rs  consumer.rs  error.rs  message.rs  subscription.rs  transport.rs
crates/nexus-redis/tests/: integration.rs
crates/nexus/src/: emitter.rs  envelope.rs  error.rs  lib.rs  payload.rs  transport.rs
crates/state-store/: Cargo.toml
crates/state-store-redis/: Cargo.toml
crates/state-store-redis/src/: error.rs  lib.rs  store.rs
crates/state-store-redis/tests/: integration.rs
crates/state-store/src/: error.rs  lib.rs  store.rs
crates/sweeper/: Cargo.toml
crates/sweeper/src/: archive_writer.rs  archiver.rs  config.rs  error.rs  lib.rs  lock.rs  sweeper.rs
crates/sweeper/tests/: integration.rs
crates/transport/: Cargo.toml
crates/transport-redis/: Cargo.toml
crates/transport-redis/src/: consumer.rs  error.rs  lib.rs  message.rs  subject.rs  subscription.rs  transport.rs
crates/transport-redis/tests/: integration.rs
crates/transport/src/: lib.rs  transport.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: archiver.rs  error.rs  lock.rs  watcher.rs
crates/watcher/tests/: integration.rs
docs/: beads-export.sql  closed-issues.md  open-issues.md
docs/domains/notify/: api-compatibility.md
docs/research/: domain-schema-template.md  kv-state-store.md  message-broker-notes.md  subject-hierarchy.md  sweeper-archiver.md  transport-abstraction.md
history/: CP_DESIGN_20260214.md  PLAN_REDIS_TRANSPORT_20260214.md
