[package]
name = "gbe-nexus-memory"
description = "In-memory transport backend for GBE (testing)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbe-nexus.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
