[package]
name = "gbe-nexus-redis"
description = "Redis Streams transport backend for GBE"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbe-nexus.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
redis = { version = "0.29", features = ["tokio-comp", "streams", "connection-manager"] }
hostname = "0.4"
