[package]
name = "gbe-state-store-redis"
description = "Redis KV state store backend for GBE"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gbe-state-store.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
redis = { version = "0.29", features = ["tokio-comp", "script", "connection-manager"] }

[dev-dependencies]
ulid.workspace = true
redis = { version = "0.29", features = ["tokio-comp"] }
