[package]
name = "gbe-state-store"
description = "KV state store abstraction for the GBE event backbone"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
