[package]
name = "gbe-transport"
description = "Transport abstraction for the GBE event backbone"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
serde = { workspace = true }
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
ulid.workspace = true
